@@ -112,6 +112,7 @@ dillo-fltk2
  - Made TopGroup a PackedGroup, simplifying UI code and removing workarounds.
  - Added a redraw(DAMAGE_HIGHLIGHT) call to Back, Forw and Stop buttons.
  - Fixed a segfault bug when closing a bw under active networking.
+ - Removed the unused SPCBuf variable.
    Patches: Johannes Hofmann
 +- Made progress bars resize automatically.
    Patches: Johannes Hofmann, Jorge Arellano Cid
